- Fix: Stories are overlapped by feature images and some other elements on pages for AMP requests. - Fix: Archive link is not visible on twenty-sixteen theme.

--- a/assets/src/web-stories-block/css/core-themes/twenty-sixteen.css
+++ b/assets/src/web-stories-block/css/core-themes/twenty-sixteen.css
@@ -31,7 +31,8 @@
     padding-top: 33px;
   }
 
-  .web-stories-theme-header-section .web-stories-list.has-archive-link {
+  .web-stories-theme-header-section
+    .web-stories-list.is-carousel.has-archive-link {
     padding-top: 52px;
     margin-top: 0;
   }
